kubernetes/webapplication/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  labels:
    app: dotnet-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: dotnet-app
        image: mcr.microsoft.com/dotnet/aspnet:6.0
        ports:
        - containerPort: 80
