kubernetes/webapplication/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  labels:
    app: dotnet-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dotnet-app
  type: ClusterIP
